--- a/ganhos1.html
+++ b/ganhos1.html
@@ -165,7 +165,7 @@
             card.className = "card";
             card.innerHTML = `
               <h3>${inv.nome} - R$${inv.valor}</h3>
-              <img src="${inv.imagem}"1004.png" style="width: 100%; height: auto; border-radius: 8px;">
+              <img src="1004.png" style="width: 100%; height: auto; border-radius: 8px;">
               <p>Data da compra: ${inv.data}</p>
               <p>Retorno diário: R$${inv.retornoDiario}</p>
               <p>Dias restantes: ${inv.diasRestantes}</p>
